--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
-title: R ile Veri Analizi (AB 2017)
+title: R ile Veri Analizi Eğitimi
+description: Akademik Bilişim 2018 Eğitimleri (27-30 Ocak 2018)
 show_downloads: false
